--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 #librerie che userò nel progetto  -> tenersi minimali
 gradio==3.12.0
+joblib == 1.2.0
 matplotlib==3.6.2
 numpy==1.23.5
 scikit-learn==1.1.3
